--- a/css/main.css
+++ b/css/main.css
@@ -45,9 +45,19 @@ h3{
 }
 
 a {
+	background: var(--accent);
+	width: 2vw;
+	height: 2vw;
+	border-radius: 50%;
 	text-decoration: none;
-	color: var(--accent);
+	color: var(--bg);
 	font-family: 'basier_mono', sans-serif;
+	text-align: center;
+	line-height: 2vw;
+}
+
+a:hover{
+	animation: Fade 0.2s linear forwards;
 }
 
 p{
